# moral-maps

./: AGENTS.md  README.md  justfile  pyproject.toml
docs/: RESEARCH_JOURNAL.md
docs/img/: README.md
docs/reviews/: readme_comprehension_20260630_triage.md
docs/reviews/readme_comprehension_20260630_123105/: panel_deepseek-v4-flash.json  panel_gemini-3.1-flash-lite.json  panel_gemma-3-12b-it.json  panel_gpt-oss-120b.json  panel_nemotron-3-super-120b-a12b.json  prompt.md
docs/reviews/readme_comprehension_rerun_20260630_123527/: panel_deepseek-v4-flash.json  panel_gemini-3.1-flash-lite.json  panel_gpt-oss-120b.json  panel_nemotron-3-super-120b-a12b.json  prompt.md
docs/spec/: 20260625_repo_cleanup.md  20260625_repo_cleanup_uat.md  20260630_authority_steer_pipeline.md
scripts/: 05_upload_hf.py  09_forced_choice.py  bootstrap_mfq2_sample_n.py  plot_2d_grid.py  plot_steer_showcase.py  probe_api_readout.py  probe_iw_themes.py  probe_mfv_think_budget.py  probe_word_readout.py  probe_wvs_foundation.py  summarize_showcase_effects.py  wvs_map.py
src/moralmaps/: __init__.py  administer.py  data.py  eval.py  guided.py  maps.py  value_axes.py
src/moralmaps/data/human/: MFV_country_norms_NOTE.md
src/tinymfv/: data.py  eval.py  guided.py  instrument.py  instruments.py  labelplace.py  maps.py  read_api.py  value_axes.py  zones.py
src/tinymfv/data/human/: mfv_country_factors.csv
tests/: test_instrument.py
